--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,4 +1,3 @@
-
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
@@ -39,4 +38,8 @@ models:
   exam_dbt:
     # Applies to all files under models/example/
     star:
+      +materialized: table
+      +tag:
+        - tag_star
+    views:
       +materialized: view
