--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,8 +1,7 @@
-
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'my_new_project'
+name: 'demo_dbt'
 version: '1.0.0'
 config-version: 2
 
@@ -36,7 +35,12 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 
 models:
-  my_new_project:
+  exam_dbt:
     # Applies to all files under models/example/
-    example:
+    star:
       +materialized: table
+      +tag:
+        - tag_star
+    views:
+      +materialized: view
+        - tag_view
